# bakezip

./: .gitignore  .prettierignore  .prettierrc.json  Cargo.toml  README.md  WASM_INTEGRATION.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.cargo/: config.toml
.github/workflows/: build.yml  deploy.yml
src/: lib.rs  main.rs  wasm.rs
src/zip/: compatibility.rs  inspect.rs  mod.rs  parse.rs  rebuild.rs  transcode.rs
