[package]
name = "bakezip"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "bakezip-cli"
path = "src/main.rs"

[dependencies]
encoding_rs = "0.8"
chardetng = "0.1"
crc-fast = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }

[target.wasm32-unknown-unknown.dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Blob"] }
js-sys = "0.3"
tsify = { version = "0.5", features = ["js"] }
serde-wasm-bindgen = "0.6"

[dev-dependencies]

[profile.release]
opt-level = "z"   # Optimize for size
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Better optimization at the cost of compile time
