[package]
name = "bakezip"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "bakezip-cli"
path = "src/main.rs"
required-features = []

[dependencies]
encoding_rs = "0.8"
chardetng = "0.1"
crc-fast = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }

[target.'cfg(any(not(target_arch = "wasm32"), target_os = "wasi"))'.dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.48.0", default-features = false, features = [
  "sync",
  "macros",
  "io-util",
  "rt",
] }

[target.wasm32-unknown-unknown.dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Blob", "BlobPropertyBag"] }
js-sys = "0.3"
tsify = { version = "0.5", features = ["js"] }
serde-wasm-bindgen = "0.6"

[dev-dependencies]

[profile.release]
opt-level = "z"   # Optimize for size
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Better optimization at the cost of compile time
